Fixed postgres image to 9.5 instead of latest

--- a/docker-compose.base.yml
+++ b/docker-compose.base.yml
@@ -26,7 +26,7 @@ redis:
     - "6379"
 
 data:
-  image: postgres:latest
+  image: postgres:9.5
   volumes:
     - /var/lib/postgresql
   command: "true"
