--- a/web/requirements.txt
+++ b/web/requirements.txt
@@ -6,7 +6,8 @@ redis==2.10.3
 django-bower==5.0.4
 django-pipeline==1.5.1
 django-rest-auth==0.6.0
-djangorestframework==3.3.2
+django-rest-swagger==2.1.2
+djangorestframework==3.6.3
 futures==3.0.3
 six==1.10.0
 wheel==0.24.0
