Fix test to run with last code version

--- a/web-test/Dockerfile
+++ b/web-test/Dockerfile
@@ -1,4 +1,4 @@
-FROM pando85/sharemusic:latest
+FROM sharemusic:test
 
 RUN apt-get update && \
     apt-get install -y postgresql postgresql-contrib && \
